<resources>
    <string name="app_name">FitX</string>

    <!-- Strings related to login -->
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="sign_in">Sign In</string>

    <string name="title_social">Social</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_programs">Programs</string>
    <string name="title_exercises">Exercises</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="welcome_to_fitx">Welcome to Fitx</string>
    <string name="welcome">Welcome to FitX</string>
    <string name="activity_forgotpassword" />
    <string name="activity_profile" />
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="register">Register!</string>
    <string name="login">Login</string>
    <string name="login_prompt">Login?</string>
    <string name="register_prompt">Register</string>
    <string name="authentication_failed">Auth Failed</string>
    <string name="auth_failure">Auth Failed</string>
    <string name="logout">Logout</string>
    <string name="clear">Clear</string>
    <string name="open_camera">Open Camera</string>
    <string name="profile_pic" />
    <string name="program">Current Program:</string>
    <string name="current_activity">Current Activity:</string>
    <string name="exercise">Exercise</string>
    <string name="weight">Weight</string>
    <string name="home_weight">Weight:</string>
    <string name="sets">Sets</string>
    <string name="home_sets">Sets:</string>
    <string name="reps">Reps</string>
    <string name="home_reps">Reps:</string>
    <string name="comments">Comments</string>
    <string name="current_program">Current Program</string>
    <string name="current_program1">Current Program:</string>
    <string name="exercises">Exercises</string>
    <string name="add_program">Add Program</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="remove_exercise">Remove Exercise</string>
    <string name="remove_program">Remove Program</string>
    <string name="select_program">Select Program</string>
    <string name="log">Log</string>
    <string name="of_10_lb_plates"># of 10 lb plates</string>
    <string name="of_25_lb_plates"># of 25 lb plates</string>
    <string name="of_45_lb_plates"># of 45 lb plates</string>
    <string name="of_5_lb_plates"># of 5 lb plates</string>
    <string name="of_2_5_lb_plates"># of 2.5 lb plates</string>
    <string name="total">Total:</string>
    <string name="of_reps_completed"># of reps completed</string>
    <string name="amount_of_weight_for_set">amount of weight for set</string>
    <string name="program_name">Program Name</string>
    <string name="programs">Programs</string>
    <string name="select_date">Select Date</string>
    <string name="program_comments">Program Comments</string>
   
    <string-array name="names" >
        <item>M</item>
        <item>F</item>
        <item>Other</item>
    </string-array>

    <string name="exercise_progress">Exercise Progress</string>
    <string name="result">Result</string>
    <string name="date_and_program">Date And Program</string>
    <string name="textview">TextView</string>
    <string name="comment_on_date">Comment on Date</string>
    <string name="program_on_date">Program on Date</string>
    <string name="exercise_name">Exercise Name</string>
</resources>
