<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/programList"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/home_page_list_views"
        android:dividerHeight="50dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/program"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/currentList"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/home_page_list_views"
        android:dividerHeight="50dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/currentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/current_activity"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programList"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sets"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/home_sets"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/reps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/reps"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/home_reps"
        android:textColor="@color/colorPrimary"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="175dp"
        android:layout_height="wrap_content"

        android:text="@string/home_weight"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reps"
        app:layout_constraintTop_toBottomOf="@+id/reps" />

    <Button
        android:id="@+id/log"
        style="?android:textAppearanceMedium"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="375dp"
        android:background="@drawable/exercise_db_button"
        android:text="@string/log"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logoutButton"
        style="?android:textAppearanceSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="0dp"
        android:background="@color/colorAccent"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calculator_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:src="@mipmap/calculator_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plate_total"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:background="#00F"
        android:text="@string/total"
        android:textSize="18sp"
        android:textColor="#FFF"

        app:layout_constraintEnd_toEndOf="@+id/calculator_view"
        app:layout_constraintStart_toStartOf="@+id/calculator_view"
        app:layout_constraintTop_toBottomOf="@+id/calculator_view" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:indeterminate="false"
        android:max="100"
        android:progressBackgroundTint="@color/grey_100"
        android:progressTint="#FF1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progressBackgroundTint="@color/grey_100"
        android:progressTint="#FF1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/percent1"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar1"
        app:layout_constraintTop_toTopOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/percent2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/progressLabel1"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="@+id/progressBar1"
        app:layout_constraintStart_toStartOf="@+id/progressBar1"
        app:layout_constraintTop_toTopOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/progressLabel2"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="@+id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />

</androidx.constraintlayout.widget.ConstraintLayout>